--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
     <!-- Cabeçalho -->
     <header class="bg-primary-dark text-white shadow-lg sticky top-0 z-40">
         <div class="container mx-auto flex items-center justify-between p-4">
-            <a href="#inicio" class="flex items-center space-x-2 flex-shrink-0">
-                <img src="logo.avif" alt="Logo SOS Máquinas" class="h-12 w-12 rounded-full">
-                <span class="text-xl md:text-2xl font-bold text-accent-yellow">SOS MÁQUINAS</span>
+            <a href="#inicio" class="flex items-center space-x-3 flex-shrink-0">
+                <img src="logo.avif" alt="Logo SOS Máquinas" class="h-16 w-16 rounded-full">
+                <span class="text-2xl md:text-3xl font-bold text-accent-yellow">SOS MÁQUINAS</span>
             </a>
             <nav class="hidden md:flex">
                 <ul class="flex items-center space-x-6">
@@ -237,7 +237,7 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-4xl font-bold text-center text-primary-dark mb-12">Nossos Serviços em Bragança Paulista</h2>
                 <!-- Layout para Desktop -->
-                <div class="hidden md:grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <div class="hidden md:grid md:grid-cols-2 lg:grid-cols-3 gap-8 justify-center">
                     <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center">
                         <img src="https://img.icons8.com/dotty/80/1E2B4B/washing-machine.png" alt="Ícone Conserto Geral" class="w-20 h-20 mb-4">
                         <h3 class="text-2xl font-semibold text-primary-dark mb-4">Conserto Geral</h3>
@@ -257,6 +257,11 @@
                         <img src="https://img.icons8.com/dotty/80/1E2B4B/settings.png" alt="Ícone Troca de Peças" class="w-20 h-20 mb-4">
                         <h3 class="text-2xl font-semibold text-primary-dark mb-4">Troca de Peças</h3>
                         <p class="text-gray-700 flex-grow">Substituição de peças por componentes de alta qualidade, com garantia de durabilidade.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center">
+                        <img src="https://img.icons8.com/dotty/80/1E2B4B/t-shirt.png" alt="Ícone Lavagem de Edredons" class="w-20 h-20 mb-4">
+                        <h3 class="text-2xl font-semibold text-primary-dark mb-4">Lavagem de Edredons</h3>
+                        <p class="text-gray-700 flex-grow">Serviço especializado para limpeza pesada de edredons e cobertores.</p>
                     </div>
                 </div>
                 <!-- Carrossel para Mobile -->
@@ -281,6 +286,11 @@
                             <img src="https://img.icons8.com/dotty/80/1E2B4B/settings.png" alt="Ícone Troca de Peças" class="w-20 h-20 mb-4">
                             <h3 class="text-2xl font-semibold text-primary-dark mb-4">Troca de Peças</h3>
                             <p class="text-gray-700 flex-grow">Substituição de peças por componentes de alta qualidade.</p>
+                        </div>
+                        <div class="carousel-item bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center">
+                            <img src="https://img.icons8.com/dotty/80/1E2B4B/t-shirt.png" alt="Ícone Lavagem de Edredons" class="w-20 h-20 mb-4">
+                            <h3 class="text-2xl font-semibold text-primary-dark mb-4">Lavagem de Edredons</h3>
+                            <p class="text-gray-700 flex-grow">Serviço especializado para limpeza pesada de edredons e cobertores.</p>
                         </div>
                     </div>
                 </div>
@@ -385,7 +395,7 @@
                 
                 <!-- Grid de Avaliações para Desktop -->
                 <div class="hidden md:grid md:grid-cols-1 lg:grid-cols-3 gap-8">
-                     <!-- Avaliação 1 -->
+                      <!-- Avaliação 1 -->
                      <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
                         <h4 class="text-xl font-bold text-primary-dark">Andressa Souza</h4>
                         <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
@@ -518,7 +528,7 @@
     <!-- Rodapé -->
     <footer class="bg-primary-dark text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-gray-400">&copy; 2025 SOS Máquinas. Todos os direitos reservados.</p>
+            <p class="text-gray-400">© 2025 SOS Máquinas. Todos os direitos reservados.</p>
         </div>
     </footer>
 
