--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                         <p class="text-gray-700 flex-grow">Substituição de peças por componentes de alta qualidade, com garantia de durabilidade.</p>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center">
-                        <img src="https://img.icons8.com/dotty/80/1E2B4B/t-shirt.png" alt="Ícone Lavagem de Edredons" class="w-20 h-20 mb-4">
-                        <h3 class="text-2xl font-semibold text-primary-dark mb-4">Lavagem de Edredons</h3>
+                        <img src="https://img.icons8.com/ios/80/1E2B4B/washing.png" alt="Ícone de Lavagem" class="w-20 h-20 mb-4">
+                        <h3 class="text-2xl font-semibold text-primary-dark mb-4">Lavagem de Edredons e Cobertores</h3>
                         <p class="text-gray-700 flex-grow">Serviço especializado para limpeza pesada de edredons e cobertores.</p>
                     </div>
                 </div>
@@ -288,8 +288,8 @@
                             <p class="text-gray-700 flex-grow">Substituição de peças por componentes de alta qualidade.</p>
                         </div>
                         <div class="carousel-item bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center">
-                            <img src="https://img.icons8.com/dotty/80/1E2B4B/t-shirt.png" alt="Ícone Lavagem de Edredons" class="w-20 h-20 mb-4">
-                            <h3 class="text-2xl font-semibold text-primary-dark mb-4">Lavagem de Edredons</h3>
+                            <img src="https://img.icons8.com/ios/80/1E2B4B/washing.png" alt="Ícone de Lavagem" class="w-20 h-20 mb-4">
+                            <h3 class="text-2xl font-semibold text-primary-dark mb-4">Lavagem de Edredons e Cobertores</h3>
                             <p class="text-gray-700 flex-grow">Serviço especializado para limpeza pesada de edredons e cobertores.</p>
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                 <!-- Sumário Google -->
                 <div class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center mb-12">
                     <img width="48" height="48" src="https://img.icons8.com/color/48/google-logo.png" alt="google-logo" class="mx-auto mb-2"/>
-                    <h3 class="text-2xl font-semibold text-primary-dark">Avaliação no Google</h3>
+                    <h3 class="text-2xl font-semibold text-primary-dark">Somos 5 estrelas no Google</h3>
                     <div class="flex items-center justify-center my-2">
                         <span class="text-3xl font-bold text-gray-800 mr-2">5.0</span>
                         <div class="flex text-yellow-400">
@@ -395,48 +395,48 @@
                 
                 <!-- Grid de Avaliações para Desktop -->
                 <div class="hidden md:grid md:grid-cols-1 lg:grid-cols-3 gap-8">
-                      <!-- Avaliação 1 -->
-                     <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
-                        <h4 class="text-xl font-bold text-primary-dark">Andressa Souza</h4>
-                        <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p class="text-gray-700 flex-grow">"Marcelo fez um ótimo trabalho, explicou um problema que máquina está, não irei arrumar pq pretendo comprar outra, da pra usar por enquanto. Eu irei indicar ele pra família e amigos com certeza, obrigado pelo seu trabalho!"</p>
-                        <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
-                    </div>
-                    <!-- Avaliação 2 -->
-                    <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
-                        <h4 class="text-xl font-bold text-primary-dark">Amauri Oliveira De Souza</h4>
-                        <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p class="text-gray-700 flex-grow">"O técnico Marcelo tem um vasto conhecimento profissional. Efetuou o serviço rapidamente e o preço cobrado foi justo e possivelmente o melhor da região. Recomendo! 👍👍👍"</p>
-                        <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
-                    </div>
-                    <!-- Avaliação 3 -->
-                    <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
-                        <h4 class="text-xl font-bold text-primary-dark">MILTON PASSOS TEIXEIRA</h4>
-                        <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p class="text-gray-700 flex-grow">"O profissional Marcelo, atendeu muito bem, foi atencioso e eficiente em seu diagnóstico e preço justo. Recomendo tranquilamente seus serviços."</p>
-                        <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
-                    </div>
-                    <!-- Avaliação 4 -->
-                    <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
-                        <h4 class="text-xl font-bold text-primary-dark">Erica Geraldis</h4>
-                        <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p class="text-gray-700 flex-grow">"Excelente profissional, iniciou o atendimento no horário combinado, lavou o tambor da máquina de lavar com Wap, logo depois deixou o ambiente limpo e seco, não riscou a máquina, trocou o kit mecanismo com as ferramentas corretas."</p>
-                        <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
-                    </div>
-                    <!-- Avaliação 5 -->
-                    <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
-                        <h4 class="text-xl font-bold text-primary-dark">Jason Mota</h4>
-                        <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p class="text-gray-700 flex-grow">"Profissional competente, atende super rapido, e ainda é honesto nos valores que cobra. Super indico sem medo de errar."</p>
-                        <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
-                    </div>
-                    <!-- Avaliação 6 (Placeholder) -->
-                     <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
-                        <h4 class="text-xl font-bold text-primary-dark">Cliente Satisfeito</h4>
-                        <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p class="text-gray-700 flex-grow">"Serviço de alta qualidade, rápido e com preço justo. Recomendo a todos de Bragança e região que precisam de um técnico de confiança."</p>
-                        <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
-                    </div>
+                        <!-- Avaliação 1 -->
+                       <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+                            <h4 class="text-xl font-bold text-primary-dark">Andressa Souza</h4>
+                            <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            <p class="text-gray-700 flex-grow">"Marcelo fez um ótimo trabalho, explicou um problema que máquina está, não irei arrumar pq pretendo comprar outra, da pra usar por enquanto. Eu irei indicar ele pra família e amigos com certeza, obrigado pelo seu trabalho!"</p>
+                            <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
+                        </div>
+                        <!-- Avaliação 2 -->
+                        <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+                            <h4 class="text-xl font-bold text-primary-dark">Amauri Oliveira De Souza</h4>
+                            <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            <p class="text-gray-700 flex-grow">"O técnico Marcelo tem um vasto conhecimento profissional. Efetuou o serviço rapidamente e o preço cobrado foi justo e possivelmente o melhor da região. Recomendo! 👍👍👍"</p>
+                            <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
+                        </div>
+                        <!-- Avaliação 3 -->
+                        <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+                            <h4 class="text-xl font-bold text-primary-dark">MILTON PASSOS TEIXEIRA</h4>
+                            <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            <p class="text-gray-700 flex-grow">"O profissional Marcelo, atendeu muito bem, foi atencioso e eficiente em seu diagnóstico e preço justo. Recomendo tranquilamente seus serviços."</p>
+                            <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
+                        </div>
+                        <!-- Avaliação 4 -->
+                        <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+                            <h4 class="text-xl font-bold text-primary-dark">Erica Geraldis</h4>
+                            <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            <p class="text-gray-700 flex-grow">"Excelente profissional, iniciou o atendimento no horário combinado, lavou o tambor da máquina de lavar com Wap, logo depois deixou o ambiente limpo e seco, não riscou a máquina, trocou o kit mecanismo com as ferramentas corretas."</p>
+                            <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
+                        </div>
+                        <!-- Avaliação 5 -->
+                        <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+                            <h4 class="text-xl font-bold text-primary-dark">Jason Mota</h4>
+                            <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            <p class="text-gray-700 flex-grow">"Profissional competente, atende super rapido, e ainda é honesto nos valores que cobra. Super indico sem medo de errar."</p>
+                            <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
+                        </div>
+                        <!-- Avaliação 6 (Placeholder) -->
+                       <div class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+                            <h4 class="text-xl font-bold text-primary-dark">Cliente Satisfeito</h4>
+                            <div class="flex text-yellow-400 my-2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            <p class="text-gray-700 flex-grow">"Serviço de alta qualidade, rápido e com preço justo. Recomendo a todos de Bragança e região que precisam de um técnico de confiança."</p>
+                            <span class="text-gray-500 text-sm mt-4">Fonte: Google</span>
+                        </div>
                 </div>
             </div>
         </section>
