--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Otimizado para Bragança Paulista -->
-    <title>S.O.S MAQUINAS | Conserto de Máquina de Lavar em Bragança Paulista</title>
+    <title>S.O.S MAQUINAS | Conserto de Máquina de Lavar e Lava Seca em Bragança Paulista</title>
     <meta name="description" content="Assistência técnica especializada em conserto de máquinas de lavar em Bragança Paulista e região. Atendemos Brastemp, Consul, Electrolux, LG e Samsung. Orçamento rápido via WhatsApp!">
     <meta name="keywords" content="conserto de máquina de lavar bragança paulista, assistência técnica máquina de lavar bragança paulista, reparo de lavadora bragança paulista, técnico de máquina de lavar bragança paulista, brastemp, consul, electrolux, lg, samsung">
     <meta name="robots" content="index, follow">
@@ -185,9 +185,12 @@
     <!-- Cabeçalho -->
     <header class="bg-primary-dark text-white shadow-lg sticky top-0 z-40">
         <div class="container mx-auto flex items-center justify-between p-4">
-            <a href="#inicio" class="flex items-center space-x-3 flex-shrink-0">
-                <img src="logo.avif" alt="Logo SOS Máquinas" class="h-16 w-16 rounded-full">
-                <span class="text-2xl md:text-3xl font-bold text-accent-yellow">SOS MÁQUINAS</span>
+            <a href="#inicio" class="flex items-center space-x-4 flex-shrink-0">
+                <img src="logo.avif" alt="Logo SOS Máquinas" class="h-20 w-20 rounded-full">
+                <div class="text-center">
+                    <span class="text-2xl md:text-3xl font-bold text-accent-yellow block">S.O.S MÁQUINAS</span>
+                    <span class="text-xs md:text-sm text-gray-300">Conserto de máquina de lavar e lava e seca</span>
+                </div>
             </a>
             <nav class="hidden md:flex">
                 <ul class="flex items-center space-x-6">
@@ -218,7 +221,7 @@
         <section id="inicio" class="hero-section-walter bg-white flex items-center justify-center pt-16">
             <div class="container mx-auto px-4 content-wrapper flex items-center">
                 <div class="text-content md:w-1/2 md:text-left">
-                    <h1 class="text-4xl md:text-6xl font-bold mb-4 text-primary-dark">Conserto de Máquina de Lavar em Bragança Paulista</h1>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-4 text-primary-dark">Conserto de Máquina de Lavar e Lava e Seca em Bragança Paulista</h1>
                     <p class="text-lg md:text-2xl mb-6 text-gray-700">Especialistas em Brastemp, Consul, Electrolux, LG e Samsung</p>
                     <p class="text-base md:text-xl mb-8 text-gray-600">Sua lavadora parou? Oferecemos assistência técnica de confiança com atendimento rápido, eficiente e com garantia em toda Bragança Paulista.</p>
                     <a href="https://wa.me/5511978036428?text=Ol%C3%A1%2C%20Marcelo!%20Vim%20do%20site%20SOS%20M%C3%A1quinas%20e%20gostaria%20de%20fazer%20um%20or%C3%A7amento." class="inline-flex items-center justify-center bg-accent-yellow text-primary-dark font-bold py-3 px-8 rounded-full text-lg hover:bg-yellow-400 transition duration-300 shadow-lg">
@@ -528,7 +531,7 @@
     <!-- Rodapé -->
     <footer class="bg-primary-dark text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-gray-400">© 2025 SOS Máquinas. Todos os direitos reservados.</p>
+            <p class="text-gray-400">© 2024 SOS Máquinas. Todos os direitos reservados.</p>
         </div>
     </footer>
 
