--- a/index.html
+++ b/index.html
@@ -206,12 +206,18 @@
             <!-- Logo e Título para Desktop -->
             <a href="#inicio" class="flex items-center space-x-4">
                 <img src="logo.avif" alt="Logo SOS Máquinas" class="h-16 w-16 rounded-full flex-shrink-0">
-                <span class="hidden md:block text-2xl lg:text-3xl font-bold text-accent-yellow">S.O.S MÁQUINAS</span>
+                <div class="hidden md:block">
+                    <span class="text-2xl lg:text-3xl font-bold text-accent-yellow block">S.O.S MÁQUINAS</span>
+                    <span class="text-sm text-accent-yellow">De lavar roupas e Lava Seca</span>
+                </div>
             </a>
     
             <!-- Título Centralizado para Mobile -->
             <div class="md:hidden absolute inset-x-0 top-1/2 -translate-y-1/2 text-center">
-                <a href="#inicio" class="text-2xl font-bold text-accent-yellow">S.O.S MÁQUINAS</a>
+                <a href="#inicio">
+                    <span class="text-2xl font-bold text-accent-yellow block">S.O.S MÁQUINAS</span>
+                    <span class="text-xs text-accent-yellow">De lavar roupas e Lava Seca</span>
+                </a>
             </div>
     
             <!-- Navegação -->
@@ -248,7 +254,7 @@
         <section id="inicio" class="hero-section-walter bg-white flex items-center justify-center pt-16">
             <div class="container mx-auto px-4 content-wrapper flex items-center">
                 <div class="text-content md:w-1/2 md:text-left">
-                    <h1 class="text-4xl md:text-6xl font-bold mb-4 text-primary-dark">Conserto de Máquina de Lavar e Lava Seca em Bragança Paulista</h1>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-4 text-primary-dark">Conserto de Máquina de Lavar e Lava e Seca em Bragança Paulista</h1>
                     <p class="text-lg md:text-2xl mb-6 text-gray-700">Especialistas em Brastemp, Consul, Electrolux, LG e Samsung</p>
                     <p class="text-base md:text-xl mb-8 text-gray-600">Sua lavadora parou? Oferecemos assistência técnica de confiança com atendimento rápido, eficiente e com garantia em toda Bragança Paulista.</p>
                     <a href="https://wa.me/5511978036428?text=Ol%C3%A1%2C%20Marcelo!%20Vim%20do%20site%20SOS%20M%C3%A1quinas%20e%20gostaria%20de%20fazer%20um%20or%C3%A7amento." class="inline-flex items-center justify-center bg-accent-yellow text-primary-dark font-bold py-3 px-8 rounded-full text-lg hover:bg-yellow-400 transition duration-300 shadow-lg">
