--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <img src="logo.avif" alt="Logo SOS Máquinas" class="h-16 w-16 rounded-full flex-shrink-0">
                 <div class="hidden md:block">
                     <span class="text-2xl lg:text-3xl font-bold text-accent-yellow block">S.O.S MÁQUINAS</span>
-                    <span class="text-sm text-accent-yellow">De lavar roupas e Lava Seca</span>
+                    <span class="text-sm font-bold text-accent-yellow">De lavar roupas e Lava Seca</span>
                 </div>
             </a>
     
@@ -216,7 +216,7 @@
             <div class="md:hidden absolute inset-x-0 top-1/2 -translate-y-1/2 text-center">
                 <a href="#inicio">
                     <span class="text-2xl font-bold text-accent-yellow block">S.O.S MÁQUINAS</span>
-                    <span class="text-xs text-accent-yellow">De lavar roupas e Lava Seca</span>
+                    <span class="text-xs font-bold text-accent-yellow">De lavar roupas e Lava Seca</span>
                 </a>
             </div>
     
