--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="md:hidden absolute inset-x-0 top-1/2 -translate-y-1/2 text-center">
                 <a href="#inicio">
                     <span class="text-2xl font-bold text-accent-yellow block">S.O.S MÁQUINAS</span>
-                    <span class="text-xs font-bold text-accent-yellow">De lavar roupas e Lava Seca</span>
+                    <span class="text-base font-bold text-accent-yellow">De lavar roupas e Lava Seca</span>
                 </a>
             </div>
     
