--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Assistência técnica especializada em conserto de máquinas de lavar em Bragança Paulista e região. Atendemos Brastemp, Consul, Electrolux, LG e Samsung. Orçamento rápido via WhatsApp!">
     <meta name="keywords" content="conserto de máquina de lavar bragança paulista, assistência técnica máquina de lavar bragança paulista, reparo de lavadora bragança paulista, técnico de máquina de lavar bragança paulista, brastemp, consul, electrolux, lg, samsung">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.seusite.com.br"> <!-- Substituir pelo seu domínio -->
+    <link rel="canonical" href="https://sosmaquinasdelavarroupa.com.br/"> <!-- Substituir pelo seu domínio -->
     <meta name="author" content="SOS Máquinas">
 
     <!-- Open Graph (para compartilhamento em redes sociais) -->
